fix footer on mobile float

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -543,6 +543,9 @@ widgets
     h2 {
         font-size: 2.4rem;
     }
+    .footer-right {
+        float: none;
+    }
 }
 
 /*--------------------------------------------------------------
